Fix layout bug in Firefox for truncated elements

--- a/assets/stylesheets/partials/_posts.scss
+++ b/assets/stylesheets/partials/_posts.scss
@@ -124,6 +124,7 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
+		vertical-align: top;
 
 		&:last-child {
 			border: 0;
